# Vector3

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
src/: Vector3.cpp  Vector3.h
tests/: IntegrationTests.cpp  UnitTests.cpp
